<resources>
    <string name="app_name">StudyBox</string>

    <string name="nav_my_account">Moje konto</string>
    <string name="nav_my_decks">Moje talie</string>
    <string name="nav_create_deck">Stwórz nową talię</string>
    <string name="nav_show_deck">Odkryj nową talię</string>
    <string name="nav_statistics">Statystyki</string>
    <string name="nav_logout">Wyloguj</string>
    <string name="nav_login">Zaloguj</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="title_activity_decks">DecksActivity</string>
    <string name="quantity_icon">An icon signifies a questions in deck</string>

    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_username">Niezalogowany</string>

    <string name="email">E-MAIL</string>
    <string name="password">HASŁO</string>
    <string name="repeat_password">POWTÓRZ HASŁO</string>
    <string name="login">ZALOGUJ</string>
    <string name="unlicensed_user">Wejdź jako niezarejestrowany użytkownik</string>
    <string name="sign_up">Utwórz nowego użytkownika</string>
    <string name="sign_up_button">Zarejestruj</string>
    <string name="image_description">Studybox Logo</string>
    <string name="auth_error">Błędne hasło bądź nazwa użytkownika</string>
    <string name="account_exist">Konto już istnieje</string>
    <string name="invalid_email">Niepoprawny e-mail!</string>
    <string name="invalid_password">Niepoprawne hasło!</string>
    <string name="invalid_password_whitespaces">Niepoprawne hasło. Nie można użyć w haśle białych znaków!</string>
    <string name="empty_field">Wypełnij pole!</string>
    <string name="network_error">Serwer niedostępny</string>
    <string name="unexpected_error">Nieoczekiwany błąd</string>
    <string name="too_short_password">Hasło jest zbyt krótkie</string>
    <string name="inconsistent_passwords">Hasła nie są jednakowe</string>
    <string name="set_obligatory_field">Wypełnij obligatoryjne pole!</string>

    <string name="title_activity_exam">ExamActivity</string>
    <string name="deck_name">Matematyka</string>
    <string name="question_no">#%1$d</string>
    <string name="correct_answers">%1$d/%2$d</string>
    <string name="answer">Odpowiedź</string>
    <string name="incorrect">Zła odpowiedź</string>
    <string name="correct">Dobra odpowiedź</string>
    <string name="question">Pytanie</string>
    <string name="correct_quantity">Dobrych</string>
    <string name="incorrect_quantity">Złych</string>
    <string name="prompt">Podpowiedź</string>
    <string name="congrats">Gratulacje!</string>
    <string name="not_bad">Nieźle!</string>
    <string name="unfortunately">Niestety…</string>
    <string name="your_score">Twój wynik</string>
    <string name="my_decks">Moje talie</string>
    <string name="improve_result">Popraw wynik</string>
    <string name="improve_only_wrong">Test z najgorszych</string>
    <string name="empty_deck">Pusta talia</string>
    <string name="no_decks">Brak talii</string>
    <string name="no_decks_query">Brak talii o podanej nazwie</string>
    <string name="decks_download_error">Błąd pobierania talii</string>
    <string name="next_prompt">Następna podpowiedź</string>
    <string name="prev_prompt">Wcześniejsza podpowiedź</string>
    <string name="question_image">Obrazek pytania</string>

    <string name="no_internet_connection">Brak połączenia z internetem</string>
    <string name="open_options">USTAWIENIA</string>
    <string name="promt">Podpowiedz</string>
    <string name="deck_data_key">DECK</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="cancel">ANULUJ</string>
    <string name="empty_deck_info">Pusta talia!</string>
    <string name="empty_deck_extended_info">W tej talii nie ma fiszek</string>
    <string name="add_flashcard">Dodaj fiszki</string>
    <string name="skip">Pomiń</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="repeat_study_question">Czy rozpocząć naukę od nowa?</string>
    <string name="repeat_study_info">To już wszystkie fiszki.</string>
    <string name="exam">Egzamin</string>
    <string name="study">Nauka</string>
    <string name="choose_mode">Wybierz tryb</string>
    <string name="all">Wszystkie</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Wyszukaj...</string>
    <string name="twenty">20</string>
    <string name="fifteen">15</string>
    <string name="ten">10</string>
    <string name="five">5</string>
    <string name="one">1</string>
    <string name="choose_quantity">Wybierz liczbę fiszek</string>
    <string name="decks">Talie</string>
    <string name="search_more_decks">Wyszukaj więcej talii!</string>
    <string name="search_decks">Wyszukaj talie!</string>

</resources>