<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode"
        android:gravity="center"
        android:textColor="@color/colorGraphite"
        android:textSize="@dimen/exam_medium_text"
        android:padding="@dimen/exam_layout_padding"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/exam_mode_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exam"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        <Button
            android:id="@+id/study_mode_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/study"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGraphiteVeryLight"
        android:layout_margin="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_quantity"
        android:textColor="@color/colorGraphite"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/exam_layout_padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/mode_1_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:enabled="false"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        <Button
            android:id="@+id/mode_5_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:enabled="false"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        <Button
            android:id="@+id/mode_10_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:enabled="false"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        <Button
            android:id="@+id/mode_15_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/fifteen"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        <Button
            android:id="@+id/mode_20_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:enabled="false"
            android:background="@drawable/dialog_button_bg_selector"
            android:textColor="@color/colorGrey"
            android:layout_margin="@dimen/exam_element_margin"/>
        </LinearLayout>
    <Button
        android:id="@+id/mode_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/all"
        android:enabled="false"
        android:textColor="@color/colorGrey"
        android:background="@drawable/dialog_button_bg_selector"
        android:layout_margin="@dimen/exam_element_margin"/>

    </LinearLayout>