<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:weightSum="1">

    <TextView
        android:id="@+id/congrats"
        android:text="@string/congrats"
        android:textSize="@dimen/text_30"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/your_score"
        android:text="@string/your_score"
        android:textSize="@dimen/text_18"
        android:gravity="center"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/total_score"
        android:text="@string/correct_answers"
        android:textSize="@dimen/text_30"
        android:gravity="center"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/my_decks"
        android:text="@string/my_decks"
        android:textAllCaps="true"
        android:textSize="@dimen/text_18"
        android:textColor="#fff"
        android:layout_weight="0.13"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingLeft="37dp"
        android:paddingRight="37dp"
        android:layout_marginBottom="13dp"/>

    <Button
        android:id="@+id/improve_result"
        android:text="@string/improve_result"
        android:textAllCaps="true"
        android:textSize="@dimen/text_18"
        android:textColor="#fff"
        android:layout_weight="0.13"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center"
        android:onClick="restartExam"
        android:background="@color/colorPrimaryDark"
        android:gravity="center" />

</LinearLayout>