<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingRight="@dimen/exam_layout_padding"
    android:paddingLeft="@dimen/exam_layout_padding">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deck_name"
        android:id="@+id/deckName"
        android:gravity="center"
        android:layout_margin="@dimen/exam_element_margin" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_no"
        android:id="@+id/questionNo"
        android:gravity="center" />

    <com.blstream.studybox.exam_view.DeckViewPager
        android:id="@+id/vpPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.99">
    </com.blstream.studybox.exam_view.DeckViewPager>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:id="@+id/correctAnswers"
        android:gravity="center"
        android:layout_margin="@dimen/exam_element_margin"/>
</LinearLayout>