<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_description"
                android:src="@drawable/splashimage" />

            <TextView
                android:id="@+id/view_auth_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_failure_margin"
                android:layout_marginTop="@dimen/text_view_failure_margin"
                android:gravity="center"
                android:text="@string/auth_error"
                android:textColor="@color/colorRaspberry"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_view_failure_margin"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_view_failure_margin"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_failure_margin"
                android:background="@color/colorRaspberry"
                android:text="@string/login"
                android:textColor="@color/colorGrey" />

            <ProgressBar
                android:id="@+id/progress_bar_login"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/link_unlicensed_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_failure_margin"
                android:gravity="center"
                android:text="@string/unlicensed_user" />

            <TextView
                android:id="@+id/link_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_failure_margin"
                android:gravity="center"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>