<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:text="@string/empty_deck_info"
                android:textSize="@dimen/exam_large_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorGraphite"
                android:layout_marginBottom="@dimen/exam_element_bottom_margin"/>

            <ImageView
                android:layout_width="@dimen/empty_box_size"
                android:layout_height="@dimen/empty_box_size"
                android:src="@drawable/empty_box"
                android:padding="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_deck_extended_info"
                android:textSize="@dimen/exam_medium_text"
                android:padding="@dimen/fab_margin"/>


            <Button
                android:id="@+id/add_flashcards_button"
                android:text="@string/add_flashcard"
                android:textAllCaps="true"
                android:textSize="@dimen/exam_medium_text"
                android:textColor="@color/colorGrey"
                android:layout_height="@dimen/result_button_height"
                android:layout_width="@dimen/result_button_width"
                android:layout_gravity="center"
                android:background="@color/colorRaspberry"
                android:gravity="center"
                android:layout_marginBottom="@dimen/your_score_bottom_margin"/>

            <Button
                android:id="@+id/my_decks_button"
                android:text="@string/my_decks"
                android:textAllCaps="true"
                android:textSize="@dimen/exam_medium_text"
                android:textColor="@color/colorGrey"
                android:layout_height="@dimen/result_button_height"
                android:layout_width="@dimen/result_button_width"
                android:layout_gravity="center"
                android:background="@color/colorDarkBlue"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>